[ALLI-1701] Ndl: fixed header menu text wrapping. (Note: the menu still breaks down into two lines when necessary.)

--- a/web/interface/themes/ndl/css/480mobile.css
+++ b/web/interface/themes/ndl/css/480mobile.css
@@ -130,6 +130,10 @@
         padding: 0;
         margin-top:6px;
     }
+   
+    #headerMenu {
+        width:470px;
+    }
     
     /* Header: Search Box */
     .content .searchFormOuterWrapper, .content .searchFormWrapper {
@@ -249,9 +253,6 @@
     }
     #carouselContainer {
         display:none;
-    }
-    #nav {
-        font-size:1.18em;
     }
     
     /* Search results */
